# hydralist

./: LICENSE  Makefile  README.md  config.json  gen_workload.py  generate_all_workloads.sh  index.h  index_string.h  microbench.h  papi_util.cpp  run_bench.py  run_bench_precompute.py  util.h  util_string.h  workload.cpp  workload_string.cpp
BwTree/: bwtree.h
hot/: CMakeLists.txt
hot/lib/hot/rowex/include/hot/rowex/: tags
hot/lib/hot/single-threaded/include/hot/singlethreaded/: .HOTSingleThreaded.hpp.swp
hot/lib/idx/: CMakeLists.txt
hot/lib/idx/content-helpers/include/idx/contenthelpers/: PairPointerKeyExtractor.hpp
hot/src/: CMakeLists.txt  main.cpp  main.h
hydralist/: CMakeLists.txt
hydralist/include/: HydraList.h  common.h  numa-config.h
hydralist/lib/: CMakeLists.txt
hydralist/lib/ARTROWEX/: Key.h  N16.cpp  N256.cpp
hydralist/src/: CMakeLists.txt  Combiner.h  HydraList.cpp  Oplog.cpp  Oplog.h  SearchLayer.h  WorkerThread.cpp  WorkerThread.h  bitset.h  linkedList.cpp  linkedList.h  listNode.cpp  listNode.h  main.cpp
hydralist/tests/: CMakeLists.txt
hydralist/tests/Hydralist/: CMakeLists.txt  test.cpp
hydralist/tests/LinkedList/: test.cpp
hydralist/tests/OpLog/: CMakeLists.txt  test.cpp
hydralist/tests/SearchLayer/: CMakeLists.txt
hydralist/tests/WorkerThread/: CMakeLists.txt  test.cpp
hydralist_string/: CMakeLists.txt
hydralist_string/include/: HydraList.h  arch.h  common.h
hydralist_string/lib/ARTOLC/: Tree.cpp
hydralist_string/lib/ARTROWEX/: CMakeLists.txt  N.cpp  N.h  N4.cpp  N48.cpp  Tree.cpp  Tree.h
hydralist_string/src/: Combiner.h  HydraList.cpp  HydraListImpl.h  Oplog.cpp  Oplog.h  SearchLayer.h  VersionedLock.h  WorkerThread.cpp  WorkerThread.h  bitset.h  linkedList.cpp  linkedList.h  listNode.cpp  listNode.h  threadData.h
hydralist_string/tests/: CMakeLists.txt
hydralist_string/tools/: get-numa-config.sh
masstree/: GNUmakefile  config.h  mtIndexAPI.hh
pcm/: Makefile  pcm-memory.cpp  pcm-numa.cpp
precompute/: artolc_a_rand  artolc_b_rand  artolc_c_rand  artolc_d_rand  artolc_e_rand  artolc_insertOnly_rand  btreeolc_a_rand  btreeolc_b_rand  btreeolc_c_rand  btreeolc_d_rand  btreeolc_e_rand  btreeolc_insertOnly_rand  bwtree_a_rand  bwtree_b_rand  bwtree_c_rand  bwtree_d_rand  bwtree_e_rand  bwtree_insertOnly_rand  hydralist_a_rand  hydralist_b_rand  hydralist_c_rand  hydralist_d_rand  hydralist_e_rand  hydralist_insertOnly_rand  masstree_a_rand  masstree_b_rand  masstree_c_rand  masstree_d_rand  masstree_e_rand  masstree_insertOnly_rand  wormhole_a_rand  wormhole_b_rand  wormhole_c_rand  wormhole_d_rand  wormhole_insertOnly_rand
precompute_string/: artolc_a_email  artolc_b_email  artolc_c_email  artolc_d_email  artolc_e_email  artolc_insertOnly_email  btreeolc_a_email  btreeolc_b_email  btreeolc_c_email  btreeolc_d_email  btreeolc_e_email  btreeolc_insertOnly_email  bwtree_a_email  bwtree_b_email  bwtree_c_email  bwtree_d_email  bwtree_e_email  bwtree_insertOnly_email  hydralist_a_email  hydralist_b_email  hydralist_c_email  hydralist_d_email  hydralist_e_email  hydralist_insertOnly_email  masstree_a_email  masstree_b_email  masstree_c_email  masstree_d_email  masstree_e_email  masstree_insertOnly_email  wormhole_a_email  wormhole_b_email  wormhole_c_email  wormhole_d_email  wormhole_insertOnly_email
resutls/500k/index/: bwtree_a_mono  (+23 more)
workload_spec/: workloada  workloadb  workloadc  workloade
wormhole/: Makefile.common  Makefile.local  README.md  tags
(+77 files in other folders)
